...
                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                            </textView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Method" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u35-AV-wew">
                                                <rect key="frame" x="16" y="527" width="359" height="80"/>
                                                <color key="backgroundColor" red="0.9179163575" green="0.85539895300000002" blue="0.80463218690000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                    </view>
                    <navigationItem key="navigationItem" id="Xrd-Ph-bv7">
                        <barButtonItem key="rightBarButtonItem" title="Add Ingredients" id="8wt-mg-en9">
                            <connections>
                                <action selector="addIngredBtn:" destination="rcL-UW-x1o" id="b14-yE-jP8"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Search Recipe" id="u0F-FS-Py6">
                        <barButtonItem key="rightBarButtonItem" title="Item" style="plain" id="wlh-mR-7Hu">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="aAT-tg-LkH">
                                <rect key="frame" x="296" y="7" width="98" height="30"/>
...
                                                <label opaque="NO" userInteractionEnabled="NO" tag="1000" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yf0-lk-B83">
                                                    <rect key="frame" x="13" y="10.666666666666668" width="260" height="58.333333333333329"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="itemLabel"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Ingredient e.g. Eggs" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WJt-EW-56y">
                                <rect key="frame" x="10" y="74" width="311" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="PantryTextField">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fL7-fa-9q4">
                                <rect key="frame" x="336" y="73" width="62" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="PantryAddItemButton">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                        <viewLayoutGuide key="safeArea" id="bQM-qm-LPb"/>
                    </view>
                    <navigationItem key="navigationItem" title="Pantry" id="IYk-YP-u2p"/>
                    <connections>
                        <outlet property="CPTableView" destination="Oip-Mr-La4" id="f0V-3C-tyB"/>
...
