...
        guard let displayedIngredients = chosenRecipe?.ingredients.joined(separator: ", ") else {return}
        
        // Message to be displayed in Alert
        var message = "'\(displayedIngredients)' \nwill be added to your Shopping List!"
        
        //Declaring alert function
        let alertController = UIAlertController(title: "Add Ingredients?", message: message, preferredStyle: .alert)
        
        //Adding action to aleret function
        alertController.addAction(UIAlertAction(title: "OK", style: .destructive, handler: { action in
            
            //Adding ingredients to shopping list
            guard let ingredients:[String] = self.chosenRecipe?.ingredients else {return}
...
