...
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xqq-69-4vk">
                                <rect key="frame" x="15" y="96" width="289" height="33"/>
                                <color key="backgroundColor" red="0.26853007649999999" green="1" blue="0.39478136409999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Add item">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="addNewItem:" destination="kVh-mF-eGk" eventType="touchUpInside" id="qOg-S0-8sl"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="add a new item here" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="UlJ-cB-8Zx">
                                <rect key="frame" x="15" y="43" width="289" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="kVh-mF-eGk" id="qtq-6f-Zun"/>
...
                            <constraint firstItem="bhh-yK-oI6" firstAttribute="trailing" secondItem="xqq-69-4vk" secondAttribute="trailing" constant="16" id="f2H-WQ-T8G"/>
                            <constraint firstItem="UlJ-cB-8Zx" firstAttribute="top" secondItem="bhh-yK-oI6" secondAttribute="top" constant="23" id="hsg-gP-5lS"/>
                            <constraint firstItem="bhh-yK-oI6" firstAttribute="trailing" secondItem="bcn-b2-TOd" secondAttribute="trailing" id="xe8-NQ-XaB"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="bhh-yK-oI6"/>
                    </view>
                    <navigationItem key="navigationItem" title="Shopping List" id="TXw-fK-jnN"/>
                    <connections>
                        <outlet property="SLTableView" destination="bcn-b2-TOd" id="N4e-M0-NdX"/>
                        <outlet property="addItemTextField" destination="UlJ-cB-8Zx" id="Su3-vy-gOU"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dcJ-NI-x4r" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
